@@ -7,6 +7,8 @@ Exim version 4.86
 JH/01 Bug 1545: The smtp transport option "retry_include_ip_address" is now
       expanded.
 
+JH/02 The smtp transport option "multi_domain" is now expanded.
+
 
 Exim version 4.85
 -----------------
